--- a/stylesheets/components/_input.scss
+++ b/stylesheets/components/_input.scss
@@ -6,6 +6,10 @@ input[type="checkbox"] {
     @extend %shadowless;
 }
 
+input[type="range"] {
+    @extend %clear-background;
+}
+
 #user_password {
     &:focus {
         border: {
